--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 
 <header>
   <h1><span>Carlos Borboa</span></h1>
-   <h2>Art Gallery Encuesta</h2>
+   <h2>Art Gallery: Encuesta</h2>
 </header>
-
-<p class="Resume">Esta es una encuensta para saber a quién dibujar primero</p>
    
    <main class="area">
      <h2 class="TopH2">Work Experience</h2>
@@ -117,7 +115,7 @@
 
         <div id="Skills">
 
-         <h2 class="TopH2">Skills</h2>
+         <h2 class="TopH2">A quién se debe de inmortalizar primero?</h2>
          <ul>
           <li >
            <span>Chelino</span>
