Change TopH2 font size

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <header>
   <h1><span>Carlos Borboa</span></h1>
-   <h2>Art Gallery: Encuesta</h2>
+   <h2>Art Gallery</h2>
 </header>
    
    <main class="area">
