Update encuesta content

--- a/index.html
+++ b/index.html
@@ -11,152 +11,69 @@
   <h1><span>Carlos Borboa</span></h1>
    <h2>Art Gallery</h2>
 </header>
-   
-   <main class="area">
-     <h2 class="TopH2">Work Experience</h2>
-     <article>
-      <p class="Year">2020  2013</p>
-      <ul>
-       <li >
-         <span>Yazaki</span>
-       </li>
-       <li>
-          7+ Years experience as IT thecnical support to field operations on manufacturing industry.
-       </li>
-       <li>
-          Perform duties related to the daily production operations, supporting growing projects for telecommunications infrastructure, deploying software releases, and IT inventory assets maintenance.
-       </li>
-      </ul>
-     </article>
-     
-     <article>
-      <p class="Year">2011 2010</p>
-      <ul>
-       <li >
-         <span>SolarMax Energía</span>
-       </li>
-       <li>
-         Thermo solar energy projects development. 
-       </li>
-       <li>
-         Design solar water heating systems, determining the efficiency, comparing costs with conventional systems and determining payback.
-       </li>
-      </ul>
-     </article>
-   
-     <article>
-      <p class="Year">2010 2009</p>
-      <ul>
-       <li >
-         <span>FEMSA</span>
-       </li>
-       <li>
-          Receipt product returns by the regional stores.
-       </li>
-       <li>
-          Complying with the standards and specifications in order to have the evidence that justifies the acceptance or rejection of the depleted product.
-       </li>
-      </ul>
-     </article>
-     
-     <article>
-      <p class="Year">2009 2005</p>
-      <ul>
-       <li >
-         <span>Sistemas Electrónicos SULU</span>
-       </li>
-       <li>
-          4+ Years. Projects management for IT telecomunications infrastructure integration.
-       </li>
-       <li>
-          Projects scope definition and leading work teams for execution, monitor deadline compliance.
-       </li>
-      </ul>
-     </article>
-   
-     <article>
-      <p class="Year">2005 2005</p>
-      <ul>
-       <li >
-         <span>Automatización Básculas y Servicios</span>
-       </li>
-       <li>
-          Industrial scales integration and technical maintenance.
-       </li>
-       <li>
-          Technical support for deploying and maintain digital scales used for weighing  process for the food and manufacturing industrie.
-       </li>
-      </ul>
-     </article>
-   
-   </main>
-   
-   <div id="Education" class="area">
-     <h2 class="TopH2">Education</h2>
-     <article>
-       <p class="Year">2005  1997</p>
-       <ul>
-        <li >
-         <span>Instituto Tecnológico de Sonora</span>
-        </li>
-        <li>
-         Recived  Electronics Engineer entitlement.
-        </li>
-        <li>
-         Control and Instrumentation emphasis.
-        </li>
-        <!-- <li>Consectetur laborum laudantium fugit assumenda saepe Minus impedit officiis minima sapiente eveniet ullam sint eum? Explicabo libero</li> -->
-       </ul>
-      </article>
-   </div>
- 
+  
+<aside class="area">
+ <div id="Encuesta">
+   <h2 class="TopH2">A quién se debe de inmortalizar primero?</h2>
+    <ul>
 
-      <aside class="area">
+     <li >
+      <span>Chelino</span>
+     </li>
+     <li>
+      <div class="ProgressBar">
+        <div class="P10"></div>
+        <h4>Omar</h4>
+      </div>
+     </li>
 
-        <div id="Skills">
+     <li >
+      <span>Mery</span>
+     </li>
+      <li>
+       <div class="ProgressBar">
+        <div class="P00"></div>
+       </div>
+      </li>
 
-         <h2 class="TopH2">A quién se debe de inmortalizar primero?</h2>
-         <ul>
-          <li >
-           <span>Chelino</span>
-          </li>
-          <li>
-             <div class="ProgressBar">
-                <div class="P30"></div>
-             </div>
-          </li>
-          <li >
-           <span>Mery</span>
-          </li>
-          <li>
-             <div class="ProgressBar">
-                <div class="P10"></div>
-             </div>
-          </li>
-          <li >
-           <span>Macha su Hermana</span>
-          </li>
-          <li>
-             <div class="ProgressBar">
-                <div class="P20"></div>
-             </div>
-          </li>
-          <li >
-           <span>Rafai</span>
-          </li>
-          <li>
-             <div class="ProgressBar">
-                <div class="P20"></div>
-             </div>
-          </li>
-          <li >
-           <span>Nena</span>
-          </li>
-          <li>
-             <div class="ProgressBar">
-                <div class="P10"></div>
-             </div>
-          </li>
+     <li >
+      <span>Abuelos</span>
+     </li>
+     <li>
+      <div class="ProgressBar">
+        <div class="P20"></div>
+        <h4>Adrian</h4>
+        <h4>Iveeeth</h4>
+      </div>
+     </li>
+
+     <li>
+      <span>Macha su Hermana</span>
+     </li>
+     <li>
+      <div class="ProgressBar">
+       <div class="P00"></div>
+      </div>
+     </li>
+
+     <li >
+      <span>Rafai</span>
+     </li>
+     <li>
+      <div class="ProgressBar">
+       <div class="P00"></div>
+      </div>
+     </li>
+
+     <li >
+      <span>Nena cofia 3 rayitas</span>
+      <h4>Nena</h4>
+     </li>
+     <li>
+      <div class="ProgressBar">
+        <div class="P10"></div>
+      </div>
+     </li>
 
           <li >
            <span>Omar</span>
