Update encuesta content

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="P00"></div>
        </div>
       </li>
+        <div id="A quién inmortalizar primero?">
 
      <li >
       <span>Abuelos</span>
@@ -48,7 +49,7 @@
      </li>
 
      <li>
-      <span>Macha su Hermana</span>
+      <span>Macha su hermana</span>
      </li>
      <li>
       <div class="ProgressBar">
@@ -80,7 +81,7 @@
           </li>
           <li>
              <div class="ProgressBar">
-                <div class="P20"></div>
+                <div class="P00"></div>
              </div>
           </li>
          </ul>
