Add serpartion border to candidates list

--- a/index.html
+++ b/index.html
@@ -18,72 +18,87 @@
    <h2 class="TopH2">A quién se debe de inmortalizar primero?</h2>
     <ul>
 
-     <li >
-      <span>Chelino</span>
-     </li>
-     <li>
-      <div class="ProgressBar">
-       <div class="P10"></div>
-      </div>
-       <h4>Omar</h4>
-     </li>
+     <article class="candidato">
+        <li >
+         <span>Chelino</span>
+          <h4>Omar</h4>
+        </li>
+        <li>
+         <div class="ProgressBar">
+          <div class="P10"></div>
+         </div>
+        </li>
+     </article>
 
-     <li >
-      <span>Mery</span>
-     </li>
-      <li>
-       <div class="ProgressBar">
-        <div class="P00"></div>
-       </div>
-      </li>
+     <article class="candidato">
+        <li >
+         <span>Mery</span>
+        </li>
+         <li>
+          <div class="ProgressBar">
+           <div class="P00"></div>
+          </div>
+         </li>
+     </article>
 
-     <li >
-      <span>Abuelos</span>
-     </li>
-     <li>
-      <div class="ProgressBar">
-        <div class="P20"></div>
-      </div>
-        <h4>Adrian</h4>
-        <h4>Iveeeth</h4>
-     </li>
+     <article class="candidato">
+        <li >
+         <span>Abuelos</span>
+           <h4>Adrian</h4>
+           <h4>Iveeeth</h4>
+        </li>
+        <li>
+         <div class="ProgressBar">
+           <div class="P20"></div>
+         </div>
+        </li>
+     </article>
 
-     <li>
-      <span>Macha su hermana</span>
-     </li>
-     <li>
-      <div class="ProgressBar">
-       <div class="P00"></div>
-      </div>
-     </li>
+     <article class="candidato">
+        <li>
+         <span>Macha su hermana</span>
+        </li>
+        <li>
+         <div class="ProgressBar">
+          <div class="P00"></div>
+         </div>
+        </li>
+     </article>
 
-     <li >
-      <span>Rafai</span>
-     </li>
-     <li>
-      <div class="ProgressBar">
-       <div class="P00"></div>
-      </div>
-     </li>
+     <article class="candidato">
+        <li >
+         <span>Rafai</span>
+        </li>
+        <li>
+         <div class="ProgressBar">
+          <div class="P00"></div>
+         </div>
+        </li>
+     </article>
 
-     <li >
-      <span>Nena cofia 3 rayitas</span>
-     </li>
-     <li>
-      <div class="ProgressBar">
-        <div class="P10"></div>
-      </div>
-      <h4>Nena</h4>
-     </li>
+     <article class="candidato">
+        <li >
+         <span>Nena cofia 3 rayitas</span>
+         <h4>Nena</h4>
+        </li>
+        <li>
+         <div class="ProgressBar">
+           <div class="P10"></div>
+         </div>
+        </li>
+     </article>
 
-     <li >
-      <span>Omar</span>
-     </li>
-     <li>
-       <div class="ProgressBar">
-        <div class="P00"></div>
-       </div>
-      </li>
+     <article class="candidato">
+        <li >
+         <span>Omar</span>
+        </li>
+        <li>
+          <div class="ProgressBar">
+           <div class="P00"></div>
+          </div>
+         </li>
+     </article>
+
     </ul>
 
  </div>
@@ -91,16 +106,7 @@
 </aside>
    
    <footer>
-       <p><span>Connect with me</span></p>
-       <p>
-           <a href="">&nbspTwitter</a>
-       </p>
-       <p>
-           <a href="">&nbspInstagram</a> 
-       </p>
-          <p>
-              <a href="">&nbspLinkedin</a>
-          </p>
+      <h5>Connect with me: carlosborboa18@gmail.com</h5>
    </footer>            
    
 
