--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <h2>Art Gallery</h2>
 </header>
   
-<aside class="area">
+<main class="area">
 
  <div id="Encuesta">
    <h2 class="TopH2">A quién se debe de inmortalizar primero?</h2>
@@ -103,7 +103,7 @@
 
  </div>
    
-</aside>
+</main>
    
    <footer>
       <h5>Connect with me: carlosborboa18@gmail.com</h5>
