Change to big text

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
    <h2 class="TopH2">A quién se debe de inmortalizar primero?</h2>
     <ul>
 
-     <article class="candidato">
+     <article class="Candidato">
         <li >
          <span>Chelino</span>
-          <h4>Omar</h4>
+          <ul class="Votantes">
+           <li>Omar</li>
+          </ul>
         </li>
         <li>
          <div class="ProgressBar">
@@ -30,9 +32,12 @@
         </li>
      </article>
 
-     <article class="candidato">
+     <article class="Candidato">
         <li >
          <span>Mery</span>
+          <ul class="Votantes">
+           <li></li>
+          </ul>
         </li>
          <li>
           <div class="ProgressBar">
@@ -41,11 +46,13 @@
          </li>
      </article>
 
-     <article class="candidato">
+     <article class="Candidato">
         <li >
          <span>Abuelos</span>
-           <h4>Adrian</h4>
-           <h4>Iveeeth</h4>
+          <ul class="Votantes">
+           <li>Adrián</li>
+           <li>Iveeeth</li>
+          </ul>
         </li>
         <li>
          <div class="ProgressBar">
@@ -54,9 +61,12 @@
         </li>
      </article>
 
-     <article class="candidato">
+     <article class="Candidato">
         <li>
          <span>Macha su hermana</span>
+          <ul class="Votantes">
+           <li></li>
+          </ul>
         </li>
         <li>
          <div class="ProgressBar">
@@ -65,9 +75,12 @@
         </li>
      </article>
 
-     <article class="candidato">
+     <article class="Candidato">
         <li >
          <span>Rafai</span>
+          <ul class="Votantes">
+           <li></li>
+          </ul>
         </li>
         <li>
          <div class="ProgressBar">
@@ -76,10 +89,12 @@
         </li>
      </article>
 
-     <article class="candidato">
+     <article class="Candidato">
         <li >
          <span>Nena cofia 3 rayitas</span>
-         <h4>Nena</h4>
+          <ul class="Votantes">
+           <li>Nena</li>
+          </ul>
         </li>
         <li>
          <div class="ProgressBar">
@@ -88,9 +103,12 @@
         </li>
      </article>
 
-     <article class="candidato">
+     <article class="Candidato">
         <li >
          <span>Omar</span>
+          <ul class="Votantes">
+           <li></li>
+          </ul>
         </li>
         <li>
           <div class="ProgressBar">
