Return to small fonts

--- a/index.html
+++ b/index.html
@@ -20,6 +20,37 @@
 
      <article class="Candidato">
         <li >
+         <span>Abuelos</span>
+          <ul class="Votantes">
+           <li>Adrián</li>
+           <li>Iveeeth</li>
+          </ul>
+        </li>
+        <li>
+         <div class="ProgressBar">
+           <div class="P20"></div>
+         </div>
+        </li>
+     </article>
+
+     <article class="Candidato">
+        <li >
+         <span>Nena cofia 3 rayitas</span>
+          <ul class="Votantes">
+           <li>Nena</li>
+           <li>Marcela</li>
+          </ul>
+        </li>
+        <li>
+         <div class="ProgressBar">
+           <div class="P20"></div>
+         </div>
+        </li>
+     </article>
+
+
+     <article class="Candidato">
+        <li >
          <span>Chelino</span>
           <ul class="Votantes">
            <li>Omar</li>
@@ -47,30 +78,15 @@
      </article>
 
      <article class="Candidato">
-        <li >
-         <span>Abuelos</span>
-          <ul class="Votantes">
-           <li>Adrián</li>
-           <li>Iveeeth</li>
-          </ul>
-        </li>
-        <li>
-         <div class="ProgressBar">
-           <div class="P20"></div>
-         </div>
-        </li>
-     </article>
-
-     <article class="Candidato">
         <li>
          <span>Macha su hermana</span>
           <ul class="Votantes">
-           <li></li>
+           <li>Alejandrito</li>
           </ul>
         </li>
         <li>
          <div class="ProgressBar">
-          <div class="P00"></div>
+          <div class="P10"></div>
          </div>
         </li>
      </article>
@@ -85,20 +101,6 @@
         <li>
          <div class="ProgressBar">
           <div class="P00"></div>
-         </div>
-        </li>
-     </article>
-
-     <article class="Candidato">
-        <li >
-         <span>Nena cofia 3 rayitas</span>
-          <ul class="Votantes">
-           <li>Nena</li>
-          </ul>
-        </li>
-        <li>
-         <div class="ProgressBar">
-           <div class="P10"></div>
          </div>
         </li>
      </article>
