--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <main class="area">
 
  <div id="Encuesta">
-   <h2 class="TopH2">A quién se debe de inmortalizar primero?</h2>
+   <h2 class="TopH2">A quién se ha de inmortalizar primero?</h2>
     <ul>
 
      <article class="Candidato">
@@ -64,20 +64,6 @@
      </article>
 
      <article class="Candidato">
-        <li >
-         <span>Mery</span>
-          <ul class="Votantes">
-           <li></li>
-          </ul>
-        </li>
-         <li>
-          <div class="ProgressBar">
-           <div class="P00"></div>
-          </div>
-         </li>
-     </article>
-
-     <article class="Candidato">
         <li>
          <span>Macha su hermana</span>
           <ul class="Votantes">
@@ -89,6 +75,21 @@
           <div class="P10"></div>
          </div>
         </li>
+     </article>
+
+
+     <article class="Candidato">
+        <li >
+         <span>Mery</span>
+          <ul class="Votantes">
+           <li></li>
+          </ul>
+        </li>
+         <li>
+          <div class="ProgressBar">
+           <div class="P00"></div>
+          </div>
+         </li>
      </article>
 
      <article class="Candidato">
