--- a/index.html
+++ b/index.html
@@ -15,23 +15,8 @@
 <main class="area">
 
  <div id="Encuesta">
-   <h2 class="TopH2">A quién se ha de inmortalizar primero?</h2>
+   <h2 class="TopH2">A quién se de inmortalizar primero?</h2>
     <ul>
-
-     <article class="Candidato">
-        <li >
-         <span>Abuelos</span>
-          <ul class="Votantes">
-           <li>Adrián</li>
-           <li>Iveeeth</li>
-          </ul>
-        </li>
-        <li>
-         <div class="ProgressBar">
-           <div class="P20"></div>
-         </div>
-        </li>
-     </article>
 
      <article class="Candidato">
         <li >
@@ -39,6 +24,22 @@
           <ul class="Votantes">
            <li>Nena</li>
            <li>Marcela</li>
+           <li>Gely</li>
+          </ul>
+        </li>
+        <li>
+         <div class="ProgressBar">
+           <div class="P30"></div>
+         </div>
+        </li>
+     </article>
+
+     <article class="Candidato">
+        <li >
+         <span>Abuelos</span>
+          <ul class="Votantes">
+           <li>Adrián</li>
+           <li>Iveeeth</li>
           </ul>
         </li>
         <li>
