--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <main class="area">
 
  <div id="Encuesta">
-   <h2 class="TopH2">A quién se de inmortalizar primero?</h2>
+   <h2 class="TopH2">A quién se ha de inmortalizar primero?</h2>
     <ul>
 
      <article class="Candidato">
@@ -128,7 +128,8 @@
 </main>
    
    <footer>
-      <h5>Connect with me: carlosborboa18@gmail.com</h5>
+      <h3>Connect with me: carlosborboa18@gmail.com</h3>
+      <h5>*Bolas de pelos no cuentan sus votos</h5>
    </footer>            
    
 
