--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <ul class="Votantes">
            <li>Adrián</li>
            <li>Iveeeth</li>
+           <li>Paquito</li>
           </ul>
         </li>
         <li>
