--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
      <article class="Candidato">
         <li >
-         <span>Nena cofia 3 rayitas</span>
+         <span>Abuelos</span>
           <ul class="Votantes">
-           <li>Nena</li>
-           <li>Marcela</li>
-           <li>Gely</li>
+           <li>Adrián-</li>
+           <li>Iveeeth-</li>
+           <li>Paquito</li>
           </ul>
         </li>
         <li>
@@ -36,11 +36,11 @@
 
      <article class="Candidato">
         <li >
-         <span>Abuelos</span>
+         <span>Nena cofia 3 rayitas</span>
           <ul class="Votantes">
-           <li>Adrián</li>
-           <li>Iveeeth</li>
-           <li>Paquito</li>
+           <li>Nena-</li>
+           <li>Marcela-</li>
+           <li>Gely</li>
           </ul>
         </li>
         <li>
@@ -49,7 +49,6 @@
          </div>
         </li>
      </article>
-
 
      <article class="Candidato">
         <li >
