--- a/index.html
+++ b/index.html
@@ -15,121 +15,11 @@
 <main class="area">
 
  <div id="Encuesta">
-   <h2 class="TopH2">A quién se ha de inmortalizar primero?</h2>
-    <ul>
-
-     <article class="Candidato">
-        <li >
-         <span>Abuelos</span>
-          <ul class="Votantes">
-           <li>Adrián-</li>
-           <li>Iveeeth-</li>
-           <li>Paquito</li>
-          </ul>
-        </li>
-        <li>
-         <div class="ProgressBar">
-           <div class="P30"></div>
-         </div>
-        </li>
-     </article>
-
-     <article class="Candidato">
-        <li >
-         <span>Nena cofia 3 rayitas</span>
-          <ul class="Votantes">
-           <li>Nena-</li>
-           <li>Marcela-</li>
-           <li>Gely</li>
-          </ul>
-        </li>
-        <li>
-         <div class="ProgressBar">
-           <div class="P30"></div>
-         </div>
-        </li>
-     </article>
-
-     <article class="Candidato">
-        <li >
-         <span>Chelino</span>
-          <ul class="Votantes">
-           <li>Omar</li>
-          </ul>
-        </li>
-        <li>
-         <div class="ProgressBar">
-          <div class="P10"></div>
-         </div>
-        </li>
-     </article>
-
-     <article class="Candidato">
-        <li>
-         <span>Macha su hermana</span>
-          <ul class="Votantes">
-           <li>Alejandrito</li>
-          </ul>
-        </li>
-        <li>
-         <div class="ProgressBar">
-          <div class="P10"></div>
-         </div>
-        </li>
-     </article>
-
-
-     <article class="Candidato">
-        <li >
-         <span>Mery</span>
-          <ul class="Votantes">
-           <li></li>
-          </ul>
-        </li>
-         <li>
-          <div class="ProgressBar">
-           <div class="P00"></div>
-          </div>
-         </li>
-     </article>
-
-     <article class="Candidato">
-        <li >
-         <span>Rafai</span>
-          <ul class="Votantes">
-           <li></li>
-          </ul>
-        </li>
-        <li>
-         <div class="ProgressBar">
-          <div class="P00"></div>
-         </div>
-        </li>
-     </article>
-
-     <article class="Candidato">
-        <li >
-         <span>Omar</span>
-          <ul class="Votantes">
-           <li></li>
-          </ul>
-        </li>
-        <li>
-          <div class="ProgressBar">
-           <div class="P00"></div>
-          </div>
-         </li>
-     </article>
-
-    </ul>
+   <h2 class="TopH2">Under Construction</h2>
 
  </div>
-   
-</main>
-   
-   <footer>
-      <h3>Connect with me: carlosborboa18@gmail.com</h3>
-      <h5>*Bolas de pelos no cuentan sus votos</h5>
-   </footer>            
-   
 
+</main>
+ 
+   
+ 
