--- a/index.html
+++ b/index.html
@@ -20,12 +20,35 @@
 
      <article class="candidato">
         <li >
-         <span>Chelino</span>
-          <h4>Omar</h4>
+         <span>Nena cofia 3 rayitas</span>
+         <h4>Nena</h4>
+         <h4>Omar</h4>
         </li>
         <li>
          <div class="ProgressBar">
-          <div class="P10"></div>
+           <div class="P20"></div>
+         </div>
+        </li>
+     </article>
+
+     <article class="candidato">
+        <li >
+         <span>Abuelos</span>
+        </li>
+        <li>
+         <div class="ProgressBar">
+           <div class="P00"></div>
+         </div>
+        </li>
+     </article>
+
+     <article class="candidato">
+        <li >
+         <span>Chelino</span>
+        </li>
+        <li>
+         <div class="ProgressBar">
+          <div class="P00"></div>
          </div>
         </li>
      </article>
@@ -44,12 +67,10 @@
      <article class="candidato">
         <li >
          <span>Abuelos</span>
-           <h4>Adrian</h4>
-           <h4>Iveeeth</h4>
         </li>
         <li>
          <div class="ProgressBar">
-           <div class="P20"></div>
+           <div class="P00"></div>
          </div>
         </li>
      </article>
@@ -72,18 +93,6 @@
         <li>
          <div class="ProgressBar">
           <div class="P00"></div>
-         </div>
-        </li>
-     </article>
-
-     <article class="candidato">
-        <li >
-         <span>Nena cofia 3 rayitas</span>
-         <h4>Nena</h4>
-        </li>
-        <li>
-         <div class="ProgressBar">
-           <div class="P10"></div>
          </div>
         </li>
      </article>
