--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
      <article class="candidato">
         <li >
-         <span>Nena cofia 3 rayitas</span>
+         <span>Nena Héroe con cofia 3 rayitas</span>
          <h4>Nena</h4>
          <h4>Omar</h4>
         </li>
