--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
          <span>Nena Héroe cofia de tres rayitas</span>
          <h4>Nena</h4>
          <h4>Omar</h4>
+         <h4>Gely</h4>
         </li>
         <li>
          <div class="ProgressBar">
-           <div class="P20"></div>
+           <div class="P30"></div>
          </div>
         </li>
      </article>
