--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
      <article class="candidato">
         <li >
          <span>Nena Héroe cofia de tres rayitas</span>
-         <h4>Nena</h4>
-         <h4>Omar</h4>
-         <h4>Gely</h4>
+         <div class="Votantes">
+            <h4>Nena</h4>
+            <h4>-Omar</h4>
+         </div>
         </li>
         <li>
          <div class="ProgressBar">
-           <div class="P30"></div>
+           <div class="P20"></div>
          </div>
         </li>
      </article>
