--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <header>
   <h1><span>Carlos Borboa</span></h1>
    <h2>Art Gallery</h2>
+   <h3>Para votar @robar a Omar en el whatsapp</h3>
 </header>
   
 <main class="area">
