--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
   <h1><span>Carlos Borboa</span></h1>
    <h2>Art Gallery</h2>
-   <h3>Para votar @robar a Omar en el whatsapp</h3>
+   <h3>*Para votar @robar a Omar en el whatsapp</h3>
 </header>
   
 <main class="area">
@@ -25,11 +25,12 @@
          <div class="Votantes">
             <h4>Nena</h4>
             <h4>-Omar</h4>
+            <h4>-Gely</h4>
          </div>
         </li>
         <li>
          <div class="ProgressBar">
-           <div class="P20"></div>
+           <div class="P30"></div>
          </div>
         </li>
      </article>
