--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
      <article class="candidato">
         <li >
-         <span>Nena Héroe cofia de tres rayitas</span>
+         <span>Nena Héroe con cofia de tres rayitas</span>
          <div class="Votantes">
             <h4>Nena</h4>
             <h4>-Omar</h4>
@@ -31,7 +31,7 @@
         </li>
         <li>
          <div class="ProgressBar">
-           <div class="P30"></div>
+           <div class="P40"></div>
          </div>
         </li>
      </article>
