--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
             <h4>-Omar</h4>
             <h4>-Gely</h4>
             <h4>-Adrián</h4>
+            <h4>-Iveth</h4>
          </div>
         </li>
         <li>
          <div class="ProgressBar">
-           <div class="P40"></div>
+           <div class="P50"></div>
          </div>
         </li>
      </article>
