--- a/index.html
+++ b/index.html
@@ -16,94 +16,121 @@
 <main class="area">
 
  <div id="Encuesta">
-   <h2 class="TopH2">A quién se debe de inmortalizar primero?</h2>
+  <h2 class="TopH2">A quién se debe de inmortalizar primero?</h2>
+   <article class="candidato">
     <ul>
+     <li >
+      <span>Nena Héroe con cofia de tres rayitas</span>
+      <div class="Votantes">
+       <h4>Nena</h4>
+       <h4>-Omar</h4>
+       <h4>-Gely</h4>
+       <h4>-Adrián</h4>
+       <h4>-Iveth</h4>
+      </div>
+     </li>
+     <li>
+      <div class="ProgressBar">
+        <div class="P50"></div>
+      </div>
+     </li>
+   </ul>
+    </article>
+
+     <article class="Faltantes">
+        <ul>
+           <li >
+            <h3>Faltantes departicipación ciudadana:</h3>
+            <div class="Votantes">
+               <h4>Marcelita</h4>
+               <h4>-Carlitos</h4>
+               <h4>-Paquito</h4>
+               <h4>-Alex</h4>
+               <h4>-Paola</h4>
+               <h4>-Wendy</h4>
+            </div>
+           </li>
+        </ul>
+     </article>
+
 
      <article class="candidato">
-        <li >
-         <span>Nena Héroe con cofia de tres rayitas</span>
-         <div class="Votantes">
-            <h4>Nena</h4>
-            <h4>-Omar</h4>
-            <h4>-Gely</h4>
-            <h4>-Adrián</h4>
-            <h4>-Iveth</h4>
-         </div>
-        </li>
-        <li>
-         <div class="ProgressBar">
-           <div class="P50"></div>
-         </div>
-        </li>
+        <ul>
+           <li >
+            <span>Abuelos</span>
+           </li>
+           <li>
+            <div class="ProgressBar">
+              <div class="P00"></div>
+            </div>
+           </li>
+        </ul>
      </article>
 
      <article class="candidato">
-        <li >
-         <span>Abuelos</span>
-        </li>
-        <li>
-         <div class="ProgressBar">
-           <div class="P00"></div>
-         </div>
-        </li>
+        <ul>
+           <li >
+            <span>Chelino</span>
+           </li>
+           <li>
+            <div class="ProgressBar">
+             <div class="P00"></div>
+            </div>
+           </li>
+        </ul>
      </article>
 
      <article class="candidato">
-        <li >
-         <span>Chelino</span>
-        </li>
-        <li>
-         <div class="ProgressBar">
-          <div class="P00"></div>
-         </div>
-        </li>
+        <ul>
+           <li >
+            <span>Mery</span>
+           </li>
+            <li>
+             <div class="ProgressBar">
+              <div class="P00"></div>
+             </div>
+            </li>
+        </ul>
      </article>
 
      <article class="candidato">
-        <li >
-         <span>Mery</span>
-        </li>
-         <li>
-          <div class="ProgressBar">
-           <div class="P00"></div>
-          </div>
-         </li>
+        <ul>
+           <li>
+            <span>Macha su hermana</span>
+           </li>
+           <li>
+            <div class="ProgressBar">
+             <div class="P00"></div>
+            </div>
+           </li>
+        </ul>
      </article>
 
      <article class="candidato">
-        <li>
-         <span>Macha su hermana</span>
-        </li>
-        <li>
-         <div class="ProgressBar">
-          <div class="P00"></div>
-         </div>
-        </li>
+        <ul>
+           <li>
+            <span>rafai</span>
+           </li>
+           <li>
+            <div class="progressbar">
+             <div class="p00"></div>
+            </div>
+           </li>
+        </ul>
      </article>
 
      <article class="candidato">
-        <li >
-         <span>Rafai</span>
-        </li>
-        <li>
-         <div class="ProgressBar">
-          <div class="P00"></div>
-         </div>
-        </li>
+        <ul>
+           <li >
+            <span>Omar</span>
+           </li>
+           <li>
+             <div class="ProgressBar">
+              <div class="P00"></div>
+             </div>
+            </li>
+        </ul>
      </article>
-
-     <article class="candidato">
-        <li >
-         <span>Omar</span>
-        </li>
-        <li>
-          <div class="ProgressBar">
-           <div class="P00"></div>
-          </div>
-         </li>
-     </article>
-
-    </ul>
 
  </div>
 
