--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <span>Nena Héroe con cofia de tres rayitas</span>
       <div class="Votantes">
        <h4>Nena</h4>
-       <h4>-Omar</h4>
-       <h4>-Gely</h4>
-       <h4>-Adrián</h4>
-       <h4>-Iveth</h4>
+       <h4>Omar</h4>
+       <h4>Gely</h4>
+       <h4>Adrián</h4>
+       <h4>Iveth</h4>
       </div>
      </li>
      <li>
@@ -43,11 +43,11 @@
             <h3>Faltantes departicipación ciudadana:</h3>
             <div class="Votantes">
                <h4>Marcelita</h4>
-               <h4>-Carlitos</h4>
-               <h4>-Paquito</h4>
-               <h4>-Alex</h4>
-               <h4>-Paola</h4>
-               <h4>-Wendy</h4>
+               <h4>Carlitos</h4>
+               <h4>Paquito</h4>
+               <h4>Alex</h4>
+               <h4>Paola</h4>
+               <h4>Wendy</h4>
             </div>
            </li>
         </ul>
@@ -133,7 +133,6 @@
      </article>
 
  </div>
-
 </main>
  
    
