Change to font effect theme

--- a/index.html
+++ b/index.html
@@ -2,136 +2,36 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Carlito's Art Gallery</title>
+   <title>Paseo Outdoor Rock&Fitnes II</title>
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-  <h1><span>Carlos Borboa</span></h1>
-   <h2>Art Gallery</h2>
+  <h1><span class="font-effect-neon">Paseo Outdoor II</span></h1>
+  <h2 class="font-effect-fire">Rock&Fitnes</h2>
    <h3>*Para votar @robar a Omar en el whatsapp</h3>
 </header>
   
 <main class="area">
-
  <div id="Encuesta">
-  <h2 class="TopH2">A quién se debe de inmortalizar primero?</h2>
+  <h2 class="TopH2">¿Quién va querir ir?</h2>
    <article class="candidato">
     <ul>
      <li >
-      <span>Nena Héroe con cofia de tres rayitas</span>
-      <div class="Votantes">
-       <h4>Nena</h4>
+      <div class="Votantes font-effect-fire">
+       <h4>Paquito</h4>
+       <h4>Marcelita</h4>
        <h4>Omar</h4>
-       <h4>Gely</h4>
-       <h4>Adrián</h4>
-       <h4>Iveth</h4>
       </div>
      </li>
      <li>
       <div class="ProgressBar">
-        <div class="P50"></div>
+        <div class="P40"></div>
       </div>
      </li>
    </ul>
     </article>
-
-     <article class="Faltantes">
-        <ul>
-           <li >
-            <h3>Faltantes departicipación ciudadana:</h3>
-            <div class="Votantes">
-               <h4>Marcelita</h4>
-               <h4>Carlitos</h4>
-               <h4>Paquito</h4>
-               <h4>Alex</h4>
-               <h4>Paola</h4>
-               <h4>Wendy</h4>
-            </div>
-           </li>
-        </ul>
-     </article>
-
-
-     <article class="candidato">
-        <ul>
-           <li >
-            <span>Abuelos</span>
-           </li>
-           <li>
-            <div class="ProgressBar">
-              <div class="P00"></div>
-            </div>
-           </li>
-        </ul>
-     </article>
-
-     <article class="candidato">
-        <ul>
-           <li >
-            <span>Chelino</span>
-           </li>
-           <li>
-            <div class="ProgressBar">
-             <div class="P00"></div>
-            </div>
-           </li>
-        </ul>
-     </article>
-
-     <article class="candidato">
-        <ul>
-           <li >
-            <span>Mery</span>
-           </li>
-            <li>
-             <div class="ProgressBar">
-              <div class="P00"></div>
-             </div>
-            </li>
-        </ul>
-     </article>
-
-     <article class="candidato">
-        <ul>
-           <li>
-            <span>Macha su hermana</span>
-           </li>
-           <li>
-            <div class="ProgressBar">
-             <div class="P00"></div>
-            </div>
-           </li>
-        </ul>
-     </article>
-
-     <article class="candidato">
-        <ul>
-           <li>
-            <span>rafai</span>
-           </li>
-           <li>
-            <div class="progressbar">
-             <div class="p00"></div>
-            </div>
-           </li>
-        </ul>
-     </article>
-
-     <article class="candidato">
-        <ul>
-           <li >
-            <span>Omar</span>
-           </li>
-           <li>
-             <div class="ProgressBar">
-              <div class="P00"></div>
-             </div>
-            </li>
-        </ul>
-     </article>
-
  </div>
 </main>
  
