--- a/index.html
+++ b/index.html
@@ -2,38 +2,17 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Paseo Outdoor Rock&Fitnes II</title>
+   <title>Feliz cumpliaños Iveth!</title>
    <link rel="stylesheet" href="style.css">
+   <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
+  <p id='test'></p>
+  <h1 id="A" span class="font-effect-neon">Feliz Cumpliaños !!! <br> <br> &nbsp &nbsp I &nbsp v &nbsp e &nbsp t &nbsp h &nbsp .</span></h1>
+  <h1 id="B" span class="font-effect-neon">Feliz Cumpliaños !!! <br> <br> &nbsp &nbsp I &nbsp  &nbsp &nbsp e &nbsp  &nbsp &nbsp h &nbsp .</span></h1>
 
-<header>
-  <h1><span class="font-effect-neon">Paseo Outdoor II</span></h1>
-  <h2 class="font-effect-fire">Rock&Fitnes</h2>
-   <h3>*Para votar @robar a Omar en el whatsapp</h3>
-</header>
-  
-<main class="area">
- <div id="Encuesta">
-  <h2 class="TopH2">¿Quién va querir ir?</h2>
-   <article class="candidato">
-    <ul>
-     <li >
-      <div class="Votantes font-effect-fire">
-       <h4>Paquito</h4>
-       <h4>Marcelita</h4>
-       <h4>Omar</h4>
-      </div>
-     </li>
-     <li>
-      <div class="ProgressBar">
-        <div class="P40"></div>
-      </div>
-     </li>
-   </ul>
-    </article>
- </div>
-</main>
- 
+</body>
+
+
    
  
