--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <p id='test'></p>
-  <h1 id="A" span class="font-effect-neon">Feliz Cumpliaños !!! <br> <br> &nbsp &nbsp I &nbsp v &nbsp e &nbsp t &nbsp h &nbsp .</span></h1>
-  <h1 id="B" span class="font-effect-neon">Feliz Cumpliaños !!! <br> <br> &nbsp &nbsp I &nbsp  &nbsp &nbsp e &nbsp  &nbsp &nbsp h &nbsp .</span></h1>
+  <h1 id="A" span class="font-effect-neon"> &nbsp  &nbsp  &nbsp &nbsp  &nbsp &nbsp F &nbsp e &nbsp l &nbsp i &nbsp z <br> <br> C &nbsp u &nbsp m &nbsp p &nbsp l &nbsp i &nbsp a &nbsp ñ &nbsp o &nbsp s <br> <br>   &nbsp  &nbsp &nbsp  &nbsp  &nbsp  &nbsp &nbsp  &nbsp  ! &nbsp ! &nbsp ! &nbsp  <br> <br>  <br> <br> &nbsp &nbsp &nbsp &nbsp &nbsp I &nbsp v &nbsp e &nbsp t &nbsp h &nbsp .</span></h1>
+  <h1 id="B" span class="font-effect-neon"> &nbsp  &nbsp  &nbsp &nbsp  &nbsp &nbsp F &nbsp e &nbsp l &nbsp i &nbsp z <br> <br> C &nbsp u &nbsp m &nbsp p &nbsp l &nbsp i &nbsp a &nbsp ñ &nbsp o &nbsp s <br> <br>   &nbsp  &nbsp &nbsp  &nbsp  &nbsp  &nbsp &nbsp  &nbsp  ! &nbsp ! &nbsp ! &nbsp  <br> <br>  <br> <br> &nbsp &nbsp &nbsp &nbsp &nbsp I &nbsp v &nbsp e &nbsp &nbsp &nbsp h &nbsp .</span></h1>
+
 
 </body>
 
