--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Feliz cumple Manigga!</title>
+   <title>Feliz 10 de mayo!</title>
    <link rel="stylesheet" href="style.css">
    <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
   <p id='test'></p>
-  <h1 id="A" span class="font-effect-fire"> F &nbsp e &nbsp l &nbsp i &nbsp z <br> <br> C &nbsp u &nbsp m &nbsp p &nbsp l &nbsp e <br> <br> ! &nbsp ! &nbsp ! &nbsp <br> <br> &nbsp   M &nbsp a &nbsp n &nbsp i &nbsp g &nbsp g &nbsp a &nbsp</span></h1>
-  <h1 id="B" span class="font-effect-fire"> F &nbsp e &nbsp l &nbsp i &nbsp z <br> <br> C &nbsp u &nbsp m &nbsp p &nbsp l &nbsp e <br> <br> ! &nbsp ! &nbsp ! &nbsp <br> <br> &nbsp   | &nbsp    &nbsp   &nbsp   &nbsp n &nbsp i &nbsp g &nbsp g &nbsp a &nbsp</span></h1>
+  <h1 id="A" span class="font-effect-neon"> !&nbsp F &nbsp e &nbsp l &nbsp i &nbsp z &nbsp !<br> <br> 1 &nbsp 0  <br> <br> d &nbsp e  <br> <br> &nbsp  m &nbsp a  &nbsp y &nbsp o</span></h1>
+  <h1 id="B" span class="font-effect-neon"> !&nbsp F &nbsp e &nbsp l &nbsp i &nbsp z &nbsp !<br> <br> 1 &nbsp    <br> <br> d &nbsp e  <br> <br> &nbsp  m &nbsp a  &nbsp y &nbsp o</span></h1>
 
 
 </body>
